Made template changes

--- a/ReadMe
+++ b/ReadMe
@@ -1,9 +1,9 @@
-Purpose of the Project 
+#Purpose of the Project 
     This Demo uses the MNIST DataSet.
     The MNIST dataset consists of 60k examples of handwritten single digit number images and Test dataset of 10k images.
     we are using the K-means algorithm included in sagemaker to group the numbers into 10 clusters one for each number.
     Amazon recomends using the high level python library provided by the amazon sagemaker for Training, Deployment and Validation.
-K- mean model
+##K- mean model
             Trained  
             Deployed
             Ran some inferences on it
